--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,6 @@ input[type="number"] {
 }
 
 
-
 input[type="submit"] {
 
   
@@ -96,13 +95,21 @@ input[type="submit"] {
   font-size: 20px;
   margin: 20px;
   text-align: center;
-
+  border-color: #ffffff;
   background-color: #4cc366;
 }
 
 input[type="submit"]:hover {
   background-color: #4cc366;
-
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 45px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 
