--- a/styles.css
+++ b/styles.css
@@ -93,17 +93,17 @@ input[type="submit"] {
   width: 80%;
   height: 50px;
   font-size: 20px;
-  margin: 20px;
+  margin: 30px;
   text-align: center;
   border-color: #ffffff;
-  background-color: #4cc366;
+  background-color: #116AFF;
 }
 
 input[type="submit"]:hover {
-  background-color: #4cc366;
+  background-color: #116AFF;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 20px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
