--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ margin-top: 00px;
 
 form {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen","Ubuntu", "Cantarell", "Fira Sans","Droid Sans", "Helvetica Neue", sans-serif;
-  width: 75%; /* changed from 500px to 100vw to make the form container take up the full width of the viewport */
-  height : 79vh; /* size of the blox */
+  width: 80vw; /* changed from 500px to 100vw to make the form container take up the full width of the viewport */
+  height : 80vh; /* size of the blox */
   margin: 0 auto;
   text-align: center;
   border: 2px solid #ccc;
@@ -98,8 +98,3 @@ input[type="submit"] {
   border-color: #ffffff;
   background-color: #116AFF;
 }
-
-
-
-
-
